--- a/Machine learning/Ch07_ensemble.ipynb
+++ b/Machine learning/Ch07_ensemble.ipynb
@@ -1796,7 +1796,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('tistory')",
+   "display_name": "Python 3.7.10 ('workspace')",
    "language": "python",
    "name": "python3"
   },
@@ -1810,12 +1810,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "333e1ce84601d9ad31e5268f04037034155a76743caed650fd3760d9c3bae04f"
+    "hash": "883c311e9dfeefb3c99af5b2f999dc39deb1d46f466ac5716db753072d267a56"
    }
   }
  },
