--- a/Machine learning/PBL.ipynb
+++ b/Machine learning/PBL.ipynb
@@ -37,7 +37,7 @@
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
     "from scipy.stats import norm\n",
-    "from scipy import stats\n",
+    "from scipy import stat\n",
     "\n",
     "from sklearn.linear_model import RidgeCV\n",
     "\n",
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,17 +1315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_RMSE_for_RandomForestRegressor is 10121.820274021855\n",
-      "test_RMSE_for_RandomForestRegressor is 26666.14103245671\n",
-      "RandomForestRegressor rmse :  [0.13966897 0.13623012 0.13881843 0.14008008 0.12974174]\n",
-      "RandomForestRegressor rmse mean :  0.13689827500976676\n"
+      "train_RMSE_for_RandomForestRegressor is 10012.015156663458\n",
+      "test_RMSE_for_RandomForestRegressor is 26354.146789948816\n",
+      "RandomForestRegressor rmse :  [0.1403696  0.13664282 0.13916621 0.14018106 0.1292584 ]\n",
+      "RandomForestRegressor rmse mean :  0.13690460373617946\n"
      ]
     }
    ],
@@ -1356,16 +1356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_RMSE_for_RandomForestRegressor is 9843.505374074377\n",
-      "RandomForestRegressor rmse :  [0.14066101 0.13648064 0.13970472 0.14291594 0.12904666]\n",
-      "RandomForestRegressor rmse mean :  0.13783084027334006\n"
+      "train_RMSE_for_RandomForestRegressor is 9639.452399650045\n",
+      "RandomForestRegressor rmse :  [0.13919245 0.13838746 0.13808244 0.14163974 0.13033907]\n",
+      "RandomForestRegressor rmse mean :  0.13767421854441447\n"
      ]
     }
    ],
@@ -1387,26 +1387,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:54:16] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "train_RMSE_for_RandomForestRegressor is 9843.505374074377\n",
-      "[13:54:25] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:54:31] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:54:36] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:54:41] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:54:46] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:33:37] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "train_RMSE_for_RandomForestRegressor is 9639.452399650045\n",
+      "[10:33:46] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:33:53] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:00] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:07] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:14] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "Xgboost model rmse :  [0.12083501 0.12804452 0.12952225 0.12744517 0.1094336 ]\n",
-      "[13:54:53] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:54:58] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:55:03] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:55:08] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
-      "[13:55:13] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:21] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:28] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:34] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:41] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "[10:34:47] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.6.0/src/objective/regression_obj.cu:203: reg:linear is now deprecated in favor of reg:squarederror.\n",
       "Xgboost model rmse :  0.12305611051896086\n"
      ]
     }
@@ -1436,16 +1436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_RMSE_for_gbm is 6709.21566002607\n",
-      "GBM model rmse :  [0.12398139 0.12296327 0.12801845 0.12675559 0.10787294]\n",
-      "GBM model rmse :  0.12179394327816333\n"
+      "train_RMSE_for_gbm is 6709.21566002609\n",
+      "GBM model rmse :  [0.12554042 0.12346953 0.12771793 0.12772302 0.10500249]\n",
+      "GBM model rmse :  0.12146157126779429\n"
      ]
     }
    ],
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1691,8 +1691,8 @@
      "text": [
       "stack... is 16566.12989623692\n",
       "stack... is 0.09284003412940982\n",
-      "test stack... is 20025.042723026247\n",
-      "test stack... is 0.1085138218255405\n"
+      "test stack... is 20029.308818974205\n",
+      "test stack... is 0.10856830877237296\n"
      ]
     }
    ],
@@ -1705,7 +1705,7 @@
     "rmse=(np.sqrt(mean_squared_error(y_train, y_train_error)))\n",
     "print(\"stack... is {}\".format(rmse))\n",
     "\n",
-    "y_test_error = stack_fit.predict(x_test)\n",
+    "y_test_final = stack_fit.predict(x_test)\n",
     "rmse=(np.sqrt(mean_squared_error(np.expm1(y_test), np.expm1(y_test_error))))\n",
     "print(\"test stack... is {}\".format(rmse))\n",
     "\n",
@@ -1716,10 +1716,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_ID' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\liki0\\AppData\\Local\\Temp\\ipykernel_22120\\145810225.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0msub\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msub\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Id'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_ID\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0msub\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'SalePrice'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mensemble\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msub\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'submission.csv'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_ID' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sub = pd.DataFrame()\n",
+    "sub['Id'] = test_ID\n",
+    "sub['SalePrice'] = ensemble\n",
+    "sub.to_csv('submission.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
